--- a/src/framework/theme/components/option/option-nested.component.scss
+++ b/src/framework/theme/components/option/option-nested.component.scss
@@ -104,8 +104,7 @@
 
 .option-nested-chevron {
   flex-shrink: 0;
-  @include nb-ltr(margin-left, 0.5rem);
-  @include nb-rtl(margin-right, 0.5rem);
+  margin-left: 0.75rem;
 }
 
 :host(.nb-transition) {
